--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 </properties>
   
+<properties>
+  <sonar.organization>rototo</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
